# FOD

./: .gitignore  Makefile  README.md  pyproject.toml
config/: config.yaml.example
debian/: changelog  control  copyright  hailo-detector.service  postinst  postrm  prerm  rules
scripts/: download-model.sh  test-camera.py  test-inference.py  test-stream.py
src/hailo_detector/: __init__.py  __main__.py  capture.py  config.py  detector.py  inference.py  monitor.py  streamer.py  utils.py
src/hailo_detector/web/: index.html
